Bug 402278 - Konsole crash
Summary: Konsole crash
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: 18.12.0
Platform: Neon Linux
: NOR crash
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords: drkonqi
: 402279 (view as bug list)
Depends on:
Blocks:
 
Reported: 2018-12-18 05:54 UTC by KOUSOURAKIS Eleftherios
Modified: 2018-12-23 13:45 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 18.12.1
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (5.06 KB, text/plain)
2018-12-23 13:45 UTC, radek.dab
Details

Note You need to log in before you can comment on or make changes to this bug.
Description KOUSOURAKIS Eleftherios 2018-12-18 05:54:27 UTC
Application: konsole (18.12.0)

Qt Version: 5.11.2
Frameworks Version: 5.53.0
Operating System: Linux 4.15.0-42-generic x86_64
Distribution: KDE neon User Edition 5.14

-- Information about the crash:
Pressed ctrl+shift+left arrow and konsole crashed. Happened already 2 times during normal usage of the terminal

The crash can be reproduced sometimes.

-- Backtrace:
Application: Konsole (konsole), signal: Segmentation fault
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0x7fa59ab82800 (LWP 1535))]

Thread 3 (Thread 0x7fa570ef3700 (LWP 1551)):
#0  0x00007fa591aac9f3 in futex_wait_cancelable (private=<optimized out>, expected=0, futex_word=0x563043661bc8) at ../sysdeps/unix/sysv/linux/futex-internal.h:88
#1  __pthread_cond_wait_common (abstime=0x0, mutex=0x563043661b78, cond=0x563043661ba0) at pthread_cond_wait.c:502
#2  __pthread_cond_wait (cond=0x563043661ba0, mutex=0x563043661b78) at pthread_cond_wait.c:655
#3  0x00007fa5761a046b in ?? () from /usr/lib/x86_64-linux-gnu/dri/nouveau_dri.so
#4  0x00007fa5761a0197 in ?? () from /usr/lib/x86_64-linux-gnu/dri/nouveau_dri.so
#5  0x00007fa591aa66db in start_thread (arg=0x7fa570ef3700) at pthread_create.c:463
#6  0x00007fa59a49288f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 2 (Thread 0x7fa57d4d6700 (LWP 1544)):
#0  0x00007fa58fda6049 in g_mutex_lock () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#1  0x00007fa58fd5faa3 in g_main_context_prepare () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007fa58fd6046b in ?? () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007fa58fd6064c in g_main_context_iteration () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007fa5969ac04b in QEventDispatcherGlib::processEvents (this=0x7fa578000b20, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#5  0x00007fa59695030a in QEventLoop::exec (this=this@entry=0x7fa57d4d5d70, flags=..., flags@entry=...) at kernel/qeventloop.cpp:214
#6  0x00007fa59677bbba in QThread::exec (this=<optimized out>) at thread/qthread.cpp:525
#7  0x00007fa5941aee45 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5DBus.so.5
#8  0x00007fa596786adb in QThreadPrivate::start (arg=0x7fa594426d60) at thread/qthread_unix.cpp:367
#9  0x00007fa591aa66db in start_thread (arg=0x7fa57d4d6700) at pthread_create.c:463
#10 0x00007fa59a49288f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 1 (Thread 0x7fa59ab82800 (LWP 1535)):
[KCrash Handler]
#6  QStackedWidget::currentWidget (this=0x4008000000000000) at widgets/qstackedwidget.cpp:229
#7  0x00007fa5978a0f00 in QTabWidget::currentWidget (this=this@entry=0x563043b21d90) at widgets/qtabwidget.cpp:644
#8  0x00007fa59a101759 in Konsole::TabbedViewContainer::moveActiveView (this=0x563043b21d90, direction=Konsole::TabbedViewContainer::MoveViewRight) at ./src/ViewContainer.cpp:227
#9  0x00007fa59698118f in QtPrivate::QSlotObjectBase::call (a=0x7ffee301ec70, r=0x5630436e82e0, this=0x5630436ec5c0) at ../../include/QtCore/../../src/corelib/kernel/qobjectdefs_impl.h:376
#10 QMetaObject::activate (sender=sender@entry=0x5630436e8e10, signalOffset=<optimized out>, local_signal_index=local_signal_index@entry=1, argv=argv@entry=0x7ffee301ec70) at kernel/qobject.cpp:3754
#11 0x00007fa596981747 in QMetaObject::activate (sender=sender@entry=0x5630436e8e10, m=m@entry=0x7fa597da9840 <QAction::staticMetaObject>, local_signal_index=local_signal_index@entry=1, argv=argv@entry=0x7ffee301ec70) at kernel/qobject.cpp:3633
#12 0x00007fa5976d86b2 in QAction::triggered (this=this@entry=0x5630436e8e10, _t1=<optimized out>) at .moc/moc_qaction.cpp:376
#13 0x00007fa5976dacec in QAction::activate (this=0x5630436e8e10, event=<optimized out>) at kernel/qaction.cpp:1166
#14 0x00007fa5976db641 in QAction::event (this=<optimized out>, e=<optimized out>) at kernel/qaction.cpp:1092
#15 0x00007fa5976dee1c in QApplicationPrivate::notify_helper (this=this@entry=0x5630435bb440, receiver=receiver@entry=0x5630436e8e10, e=e@entry=0x7ffee301ef20) at kernel/qapplication.cpp:3727
#16 0x00007fa5976e63ef in QApplication::notify (this=0x5630435bb420, receiver=0x5630436e8e10, e=0x7ffee301ef20) at kernel/qapplication.cpp:3486
#17 0x00007fa596951fe8 in QCoreApplication::notifyInternal2 (receiver=0x5630436e8e10, event=event@entry=0x7ffee301ef20) at kernel/qcoreapplication.cpp:1048
#18 0x00007fa596f0d787 in QCoreApplication::sendEvent (event=0x7ffee301ef20, receiver=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:234
#19 QShortcutMap::dispatchEvent (this=this@entry=0x5630435bb520, e=e@entry=0x7ffee301efd0) at kernel/qshortcutmap.cpp:687
#20 0x00007fa596f0d85a in QShortcutMap::tryShortcut (this=this@entry=0x5630435bb520, e=e@entry=0x7ffee301efd0) at kernel/qshortcutmap.cpp:351
#21 0x00007fa596ec0e23 in QWindowSystemInterface::handleShortcutEvent (window=<optimized out>, window@entry=0x5630436f84f0, timestamp=1783374, keyCode=16777236, modifiers=..., nativeScanCode=114, nativeVirtualKey=65363, nativeModifiers=21, text=..., autorepeat=false, count=1) at kernel/qwindowsysteminterface.cpp:461
#22 0x00007fa596edee67 in QGuiApplicationPrivate::processKeyEvent (e=0x7fa58000ec70) at kernel/qguiapplication.cpp:2189
#23 0x00007fa596ee4315 in QGuiApplicationPrivate::processWindowSystemEvent (e=e@entry=0x7fa58000ec70) at kernel/qguiapplication.cpp:1823
#24 0x00007fa596ebcf5b in QWindowSystemInterface::sendWindowSystemEvents (flags=...) at kernel/qwindowsysteminterface.cpp:1032
#25 0x00007fa58852176b in QPAEventDispatcherGlib::processEvents (this=0x563043627ae0, flags=...) at qeventdispatcher_glib.cpp:70
#26 0x00007fa59695030a in QEventLoop::exec (this=this@entry=0x7ffee301f240, flags=..., flags@entry=...) at kernel/qeventloop.cpp:214
#27 0x00007fa5969594d0 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1336
#28 0x00007fa596ed89cc in QGuiApplication::exec () at kernel/qguiapplication.cpp:1762
#29 0x00007fa5976ded75 in QApplication::exec () at kernel/qapplication.cpp:2901
#30 0x00007fa59a78a197 in kdemain (argc=<optimized out>, argv=<optimized out>) at ./src/main.cpp:207
#31 0x00007fa59a392b97 in __libc_start_main (main=0x563041d2d720 <main>, argc=3, argv=0x7ffee301f4f8, init=<optimized out>, fini=<optimized out>, rtld_fini=<optimized out>, stack_end=0x7ffee301f4e8) at ../csu/libc-start.c:310
#32 0x0000563041d2d75a in _start ()

Reported using DrKonqi
Comment 1 Kurt Hindenburg 2018-12-18 15:27:34 UTC
*** Bug 402279 has been marked as a duplicate of this bug. ***
Comment 2 Kurt Hindenburg 2018-12-18 15:28:12 UTC
Yes, I can get it to crash as well
Comment 3 Kurt Hindenburg 2018-12-18 15:44:25 UTC
#0  0x00007ffff21fceb4 in QStackedWidget::currentWidget() const ()
   from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#1  0x00007ffff78c1292 in Konsole::TabbedViewContainer::moveActiveView (this=
    0x61e4d0, direction=Konsole::TabbedViewContainer::MoveViewLeft)
    at /home/kurthindenburg/Devel/KDE/src/kde/applications/konsole/src/ViewContainer.cpp:232
#2  0x00007ffff78c9fa8 in Konsole::ViewManager::moveActiveViewLeft (
    this=0x748e30)
    at /home/kurthindenburg/Devel/KDE/src/kde/applications/konsole/src/ViewManager.cpp:324
Comment 4 Kurt Hindenburg 2018-12-21 15:52:26 UTC
Git commit 9e1a3b41c425d889149dab541fdc5dd6325b4d09 by Kurt Hindenburg.
Committed on 21/12/2018 at 15:51.
Pushed by hindenburg into branch 'master'.

Fix crash while trying to move tab with only one view

M  +3    -0    src/ViewContainer.cpp

https://commits.kde.org/konsole/9e1a3b41c425d889149dab541fdc5dd6325b4d09
Comment 5 Kurt Hindenburg 2018-12-21 16:11:41 UTC
Git commit 6a759670ac6a8fecd5142dd0d1f79b4b36a22721 by Kurt Hindenburg.
Committed on 21/12/2018 at 16:09.
Pushed by hindenburg into branch 'Applications/18.12'.

Fix crash while trying to move tab with only one view
(cherry picked from commit 9e1a3b41c425d889149dab541fdc5dd6325b4d09)

M  +3    -0    src/ViewContainer.cpp

https://commits.kde.org/konsole/6a759670ac6a8fecd5142dd0d1f79b4b36a22721
Comment 6 radek.dab 2018-12-23 13:45:45 UTC
Created attachment 117074 [details]
New crash information added by DrKonqi

konsole (18.12.0) using Qt 5.12.0

- What I was doing when the application crashed:

I opened new window with one tab. In this window I ran tmux and pressed Ctrl+Shift+Right.

- Custom settings of the application:

My tmux configuration also uses Ctrl+Shift+Right/Left to rearrange windows.

-- Backtrace (Reduced):
#6  0x00007fbbabcefd00 in QStackedWidget::currentWidget() const () from /usr/lib/libQt5Widgets.so.5
[...]
#9  0x00007fbbabb41643 in QAction::triggered(bool) () from /usr/lib/libQt5Widgets.so.5
#10 0x00007fbbabb43d2a in QAction::activate(QAction::ActionEvent) () from /usr/lib/libQt5Widgets.so.5
#11 0x00007fbbabb44635 in QAction::event(QEvent*) () from /usr/lib/libQt5Widgets.so.5
#12 0x00007fbbabb47e34 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQt5Widgets.so.5