Fix crash while trying to move tab with only one view

BUG: 402278